fixed slider disappeaing after "display: flex" or not showing "row"

--- a/src/app/components/carousel-item/carousel-item.component.scss
+++ b/src/app/components/carousel-item/carousel-item.component.scss
@@ -1,8 +1,7 @@
 #uncharted {
   position: relative;
-  width: calc(100% - 150px);
+  width: 80vw;
   aspect-ratio: calc(5 / 3);
-  margin: 50px;
 
   #bg {
     position: absolute;
